--- a/view/system-management/user-management/user-management.templ
+++ b/view/system-management/user-management/user-management.templ
@@ -5,6 +5,8 @@ import "farishadibrata.com/rapidmono/view/base"
 
 templ Index() {
     @base.AuthorizedLayout(){
+        <div class="border border-slate-400 border-2">
         user Management
+        </div>
     }
 }
